use autoboxing to simplify java expressions